feat: Added more endpoints, auth middleware, and new database collection
