# api/src/epa_api/models/apple_token_exchange.py
@@ -3,7 +3,7 @@
 """
     EPA (Event Posting App) API
 
-    API for a mobile safety application that allows users to post and subscribe  to local safety concerns. 
+    API for a mobile safety application that allows users to post and subscribe to local safety concerns. 
 
     The version of the OpenAPI document: 1.0.0
     Generated by OpenAPI Generator (https://openapi-generator.tech)
@@ -20,7 +20,7 @@ import json
 
 
 
-from pydantic import BaseModel, ConfigDict, Field, StrictStr
+from pydantic import BaseModel, ConfigDict, StrictStr
 from typing import Any, ClassVar, Dict, List, Optional
 try:
     from typing import Self
@@ -31,9 +31,9 @@ class AppleTokenExchange(BaseModel):
     """
     AppleTokenExchange
     """ # noqa: E501
-    identity_token: StrictStr = Field(alias="identityToken")
-    full_name: Optional[StrictStr] = Field(default=None, alias="fullName")
-    __properties: ClassVar[List[str]] = ["identityToken", "fullName"]
+    identity_token: Optional[StrictStr] = None
+    full_name: Optional[StrictStr] = None
+    __properties: ClassVar[List[str]] = ["identity_token", "full_name"]
 
     model_config = {
         "populate_by_name": True,
@@ -84,8 +84,8 @@ class AppleTokenExchange(BaseModel):
             return cls.model_validate(obj)
 
         _obj = cls.model_validate({
-            "identityToken": obj.get("identityToken"),
-            "fullName": obj.get("fullName")
+            "identity_token": obj.get("identity_token"),
+            "full_name": obj.get("full_name")
         })
         return _obj
 
