# api/src/epa_api/models/auth_token.py
@@ -3,7 +3,7 @@
 """
     EPA (Event Posting App) API
 
-    API for a mobile safety application that allows users to post and subscribe  to local safety concerns. 
+    API for a mobile safety application that allows users to post and subscribe to local safety concerns. 
 
     The version of the OpenAPI document: 1.0.0
     Generated by OpenAPI Generator (https://openapi-generator.tech)
@@ -32,10 +32,10 @@ class AuthToken(BaseModel):
     AuthToken
     """ # noqa: E501
     access_token: Optional[StrictStr] = None
-    refresh_token: Optional[StrictStr] = None
+    session_token: Optional[StrictStr] = None
     token_type: Optional[StrictStr] = None
     expires_in: Optional[StrictInt] = None
-    __properties: ClassVar[List[str]] = ["access_token", "refresh_token", "token_type", "expires_in"]
+    __properties: ClassVar[List[str]] = ["access_token", "session_token", "token_type", "expires_in"]
 
     model_config = {
         "populate_by_name": True,
@@ -87,7 +87,7 @@ class AuthToken(BaseModel):
 
         _obj = cls.model_validate({
             "access_token": obj.get("access_token"),
-            "refresh_token": obj.get("refresh_token"),
+            "session_token": obj.get("session_token"),
             "token_type": obj.get("token_type"),
             "expires_in": obj.get("expires_in")
         })
