# api/src/epa_api/models/user_created.py
@@ -20,19 +20,19 @@ import json
 
 
 
-from pydantic import BaseModel, ConfigDict, Field, StrictStr
-from typing import Any, ClassVar, Dict, List
+from pydantic import BaseModel, ConfigDict, StrictStr
+from typing import Any, ClassVar, Dict, List, Optional
 try:
     from typing import Self
 except ImportError:
     from typing_extensions import Self
 
-class SocialTokenExchange(BaseModel):
+class UserCreated(BaseModel):
     """
-    SocialTokenExchange
+    UserCreated
     """ # noqa: E501
-    id_token: StrictStr = Field(description="Token from social provider SDK.")
-    __properties: ClassVar[List[str]] = ["id_token"]
+    user_id: Optional[StrictStr] = None
+    __properties: ClassVar[List[str]] = ["user_id"]
 
     model_config = {
         "populate_by_name": True,
@@ -52,7 +52,7 @@ class SocialTokenExchange(BaseModel):
 
     @classmethod
     def from_json(cls, json_str: str) -> Self:
-        """Create an instance of SocialTokenExchange from a JSON string"""
+        """Create an instance of UserCreated from a JSON string"""
         return cls.from_dict(json.loads(json_str))
 
     def to_dict(self) -> Dict[str, Any]:
@@ -75,7 +75,7 @@ class SocialTokenExchange(BaseModel):
 
     @classmethod
     def from_dict(cls, obj: Dict) -> Self:
-        """Create an instance of SocialTokenExchange from a dict"""
+        """Create an instance of UserCreated from a dict"""
         if obj is None:
             return None
 
@@ -83,7 +83,7 @@ class SocialTokenExchange(BaseModel):
             return cls.model_validate(obj)
 
         _obj = cls.model_validate({
-            "id_token": obj.get("id_token")
+            "user_id": obj.get("user_id")
         })
         return _obj
 
